# jortt-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: architecture.md  auth.md  e2e-testing.md  endpoint-coverage.md  error-handling.md  live-testing.md  versioning.md
docs/openapi/: README.md  jortt-swagger-2026-05-05.json  operations-2026-05-05.json
docs/uml/: README.md  class.md  component.md  sequence-invoice-pdf.md  sequence-request.md  sequence-token-refresh.md  state-token-lifecycle.md
examples/: README.md  env.template.ps1  env.template.sh  full_openapi_smoke.rs  oauth_client_credentials.rs  typed_live_workflow.rs
src/: auth.rs  error.rs  ids.rs  lib.rs  raw.rs
src/api/: endpoints.rs  mod.rs  operations.rs
src/client/: mod.rs
src/models/: common.rs  customers.rs  invoices.rs  ledger_accounts.rs  mod.rs
tests/: client_contract.rs  e2e_live.rs  e2e_mock.rs  operation_inventory.rs
