[package]
name = "jortt"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Floris <floris@xylex.group>"]
description = "Async Rust SDK for the Jortt API with typed modules, hybrid OAuth helpers, and raw operation escape hatch"
license = "MIT"
readme = "README.md"
repository = "https://github.com/xylex-group/jortt-rs"
homepage = "https://github.com/xylex-group/jortt-rs"
documentation = "https://docs.rs/jortt"
keywords = ["jortt", "api", "sdk", "accounting", "oauth2"]
categories = ["api-bindings", "authentication", "network-programming"]
include = [
  "src/**/*",
  "tests/**/*",
  "examples/**/*",
  "docs/**/*",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "SECURITY.md"
]

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
default-tls = ["reqwest/default-tls"]

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "gzip", "brotli", "deflate", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.41"
percent-encoding = "2.3.2"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde"] }

[dev-dependencies]
httpmock = "0.8.2"
serde_path_to_error = "0.1.20"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
